# oj-eval-openhands-015-20260423200151

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  sample_input.txt
